@@ -1,3 +1,8 @@
+Tue Jul 24 18:13:23 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Transport.cpp:
+          Fixed compile problems related to my changes earlier today
+
 Tue Jul 24 15:55:59 UTC 2007  Vadym Ridosh  <vridosh@prismtech.com>
 
         * orbsvcs/orbsvcs/PortableGroup/UIPMC_Transport.h:
